2020-02-03  Zan Dobersek  <zdobersek@igalia.com>

        Use std::hypot() where possible
        https://bugs.webkit.org/show_bug.cgi?id=198483

        Reviewed by Carlos Garcia Campos.

        Use std::hypot() where possible, allowing for a possibly more precise
        calculation of square roots of sums of two or three square values.

        * TestWebKitAPI/mac/DragAndDropSimulatorMac.mm:
        (-[DragAndDropSimulator initialProgressForMouseDrag]):

2020-02-03  Víctor Manuel Jáquez Leal  <vjaquez@igalia.com>

        [JHBuild] remove libvpx
        https://bugs.webkit.org/show_bug.cgi?id=207103

        Reviewed by Xabier Rodriguez-Calvar.

        libvpx were added in jhbuild in times of OpenWebRTC. Nowadays, LibWebRTC is used and libvpx is
        installed through Tools/gtk/install-dependencies, thus it should be removed from jhbuild.modules

        * gstreamer/jhbuild.modules: remove libvpx.

2020-02-02  Sam Weinig  <weinig@apple.com>

        Update style checker with new locations OS version checks are allowed
        https://bugs.webkit.org/show_bug.cgi?id=207106

        Reviewed by Alexey Proskuryakov.

        * Scripts/webkitpy/style/checkers/cpp.py:
        (check_os_version_checks):
        * Scripts/webkitpy/style/checkers/cpp_unittest.py:
        (WebKitStyleTest.test_os_version_checks):
        Update path check to allow anything with the pattern "Source/WTF/wtf/Platform[a-zA-Z]+\.h"

2020-02-01  Simon Fraser  <simon.fraser@apple.com>

        Closing a MiniBrowser WK2 window does not release the WKWebView
        https://bugs.webkit.org/show_bug.cgi?id=203185

        Reviewed by Wenson Hsieh.
        
        Use a weak WKWebView reference in the _textFinder.hideInterfaceCallback() block
        to avoid a retain cycle that keeps the window controller and WKWebView alive.

        * MiniBrowser/mac/WK2BrowserWindowController.m:
        (-[WK2BrowserWindowController awakeFromNib]):

2020-01-31  David Quesada  <david_quesada@apple.com>
